# nixl

./: meson.build
.ci/: cidemo-init.sh
.ci/dockerfiles/: Dockerfile.build_helper  Dockerfile.ci  Dockerfile.gpu-test  Dockerfile.pr_helper  Dockerfile.slurm
.ci/jenkins/lib/: build-llm-container-matrix.yaml  build-matrix.yaml  test-cmx-matrix.yaml  test-dl-matrix.yaml  test-matrix.yaml
.ci/jenkins/pipeline/: Jenkinsfile  proj-jjb.yaml
.ci/scripts/: podman_build.sh  run_slurm_allocation.sh  run_slurm_podman.sh  run_tests_slurm.sh  stop_slurm_allocation.sh
.gitlab/: build.sh  test_cmx.sh  test_nixlbench.sh
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/nixl/: nixl_worker.cpp
src/plugins/: meson.build
src/plugins/doca_memos/: README.md  doca_memos_backend.cpp  doca_memos_backend.h  doca_memos_plugin.cpp  doca_memos_progress_engine.cpp  doca_memos_progress_engine.h  meson.build
test/unit/plugins/: meson.build
test/unit/plugins/doca_memos/: FAILURE_MODES_ANALYSIS.md  README.md  doca_compat.h  doca_ctx.h  doca_error.h  doca_kv.h  doca_kvdev.h  doca_kvdev_io.h  doca_memos_backend_test.cpp  doca_memos_mocks.cpp  doca_memos_mocks.h  doca_nvme_kernel_kvdev.h  doca_nvme_kernel_kvdev_io.h  doca_pe.h  doca_types.h  meson.build
